# DMOD

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EvaluationSchema.d.ts  INSTALL.md  NOTICE  README.md  TESTING.md  code_style.sh  conftest.py  custom_up_stack.sh  deployment_notes.txt  docker-build-custom.yml  docker-build.yml  docker-deploy-custom.yml  docker-deploy.yml  docker-registry.yml  down_stack.sh  example.env  example_test_env  gitflow.md  install.sh  py_source.Dockerfile  pyproject.toml  pytest.ini  readme.txt  requirements.txt  up_stack.sh
python/lib/access/: pyproject.toml  setup.py
python/lib/access/dmod/access/: __init__.py  redis_session_manager.py
python/lib/access/dmod/test/: it_redis_session_manager.py
python/lib/access/nwmaas/access/: redis_session_manager.py  user_manager.py
python/lib/access/nwmaas/test/: it_redis_session_manager.py  setup_it_env.sh
python/lib/client/: pyproject.toml  setup.py
python/lib/client/dmod/client/: __init__.py  __main__.py  _reader.py  client_config.py  dmod_client.py  domain_detectors.py  request_clients.py
python/lib/client/dmod/test/: test_client_config.py  test_dataset_client.py  test_dmod_client.py  testing_config.json
python/lib/communication/: .gitignore  MANIFEST.in  pyproject.toml  setup.py
python/lib/communication/dmod/communication/: __init__.py  async_service.py  client.py  data_transmit_message.py  dataset_management_message.py  evaluation_request.py  maas_request.py  message.py  metadata_message.py  partition_request.py  registered_interface.py  request_handler.py  scheduler_request.py  scheduler_request_response_body.py  serializeable.py  session.py  unsupported_message.py  update_message.py  validator.py  websocket_interface.py
python/lib/communication/dmod/test/: __init__.py  it_websocket_interface.py  setup_it_env.sh  test_dataset_management_message.py  test_dataset_management_response.py  test_dataset_query.py  test_decorated_interface.py  test_full_auth_session.py  test_json_request_validator.py  test_model_exec_request.py  test_ngen_cal_request_estimation_config.py  test_ngen_calibration_request.py  test_ngen_request.py  test_ngen_request_response.py  test_nwm_request.py  test_nwm_request_response.py  test_partial_realization_config.py  test_scheduler_client.py  test_scheduler_request_message.py  test_scheduler_request_response.py  test_session_init_response.py  test_websocket_interface.py
python/lib/communication/nwmaas/communication/: request_handler.py  session.py  websocket_interface.py
python/lib/communication/nwmaas/test/: __init__.py  it_websocket_interface.py  test_scheduler_client.py  test_session_init_response.py
python/lib/core/: README.md  pyproject.toml  setup.py
python/lib/core/dmod/core/: __init__.py  context.py  data_domain_detectors.py  dataset.py  decorators.py  enum.py  exception.py  execution.py  meta_data.py  serializable.py  serializable_dict.py
python/lib/core/dmod/test/: test_allocationparadigm.py  test_basic_result_indicator.py  test_context.py  test_data_requirement.py  test_dataset.py  test_dataset_manager.py  test_decorator.py  test_enum.py  test_meta_data.py  test_mixins.py  test_serializable_field_serializers.py
python/lib/evaluations/: MANIFEST.in  README.md  pyproject.toml  setup.py  update_diagrams.py
python/lib/evaluations/dmod/evaluations/: evaluate.py  jsonquery.py  measurement_units.py  reader.py  retrieval.py  transformation.py  util.py
python/lib/evaluations/dmod/test/: common.py  test_associatedfield.py  test_backendspecification.py  test_evaluate.py  test_fieldmappingspecification.py  test_indexfield.py  test_locationspecification.py  test_merging.py  test_mesurement_units.py  test_metricspecification.py  test_models.py  test_thresholddefinition.py  test_thresholdspecification.py  test_util.py  test_valueselector.py
python/lib/externalrequests/: pyproject.toml  setup.py
python/lib/externalrequests/dmod/externalrequests/: __init__.py  auth_handler.py  evaluation_request_handler.py  maas_request_handlers.py  model_exec_request_handler.py  nwm_request_handler.py
python/lib/externalrequests/dmod/test/: __init__.py  externalrequests_test_utils.py  it_model_exec_request_handler.py  it_nwm_request_handler.py  setup_it_env.sh  test_auth_handler.py  test_inner_session_auth_util.py
python/lib/externalrequests/nwmaas/test/: it_nwm_request_handler.py
python/lib/hydrofabric/: README.md  pyproject.toml  setup.py
python/lib/hydrofabric/dmod/hydrofabric/: gpkg_utils.py  linked_data_provider.py  linked_data_provider_factory.py
python/lib/hydrofabric/dmod/test/: __init__.py  test_gpkg_utils.py  test_linked_data_provider.py
python/lib/metrics/: MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.py
python/lib/metrics/dmod/: __init__.py
python/lib/metrics/dmod/metrics/: __init__.py  _version.py  categorical.py  common.py  communication.py  metric.py  scoring.py  threshold.py
python/lib/metrics/dmod/test/: TestData.md  model_1.csv  model_2.csv  model_5.csv  test_metadata.py  test_metrics.py  test_scaling.py  test_scoring.py  uniform_metrics_and_thresholds.py
python/lib/modeldata/: pyproject.toml  setup.py
python/lib/modeldata/dmod/modeldata/: __init__.py
python/lib/modeldata/dmod/test/: __init__.py  abstract_geopackage_hydrofabric_tester.py  it_object_store_dataset_manager.py  setup_it_env.sh  (+15 more)
python/lib/monitor/: pyproject.toml  setup.py
python/lib/redis/: pyproject.toml  setup.py
python/lib/scheduler/: pyproject.toml  setup.py
python/services/datarequestservice/: README.md  pyproject.toml  setup.py
python/services/dataservice/: README.md  pyproject.toml  setup.py
python/services/evaluationservice/: README.md  pyproject.toml  setup.py
python/services/monitorservice/: README.md  pyproject.toml  setup.py
python/services/partitionerservice/: README.md  pyproject.toml  setup.py
python/services/requestservice/: README.md  pyproject.toml  setup.py
python/services/schedulerservice/: pyproject.toml  setup.py
python/services/subsetservice/: README.md  pyproject.toml  setup.py
(+1086 files in other folders)
