[build-system]
requires = ["setuptools >= 70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmod.access"
authors = [
    { name = "Robert Bartel" },
    { name = "Austin Raney", email = "austin.raney@noaa.gov" },
    { name = "Nels Frazier" },
]
dependencies = ["websockets", "dmod.communication>=0.4.2", "dmod.redis>=0.1.0"]
readme = "README.md"
description = "Library package with service-side classes for handling client-side access details"
dynamic = ["version"]
license = { text = "DOC" }
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.setuptools.dynamic]
version = { attr = "dmod.access._version.__version__" }

[tool.setuptools.packages.find]
exclude = ["dmod.test*"]
