[build-system]
requires = ["setuptools >= 70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmod.client"
authors = [
    { name = "Robert Bartel" },
    { name = "Austin Raney", email = "austin.raney@noaa.gov" },
]
dependencies = [
    "dmod.core>=0.17.0",
    "websockets>=8.1",
    "pydantic>=1.10.8,~=1.10",
    "dmod.communication>=0.20.0",
    "dmod.externalrequests>=0.6.0",
    "dmod.modeldata>=0.12.0",
]
readme = "README.md"
description = "Client interface package for components of the DMOD architecture"
dynamic = ["version"]
license = { text = "DOC" }
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.setuptools.dynamic]
version = { attr = "dmod.client._version.__version__" }

[tool.setuptools.packages.find]
exclude = ["dmod.test*"]
