[build-system]
requires = ["setuptools >= 70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmod.core"
authors = [
    { name = "Robert Bartel" },
    { name = "Austin Raney", email = "austin.raney@noaa.gov" },
    { name = "Chris Tubbs" },
]
dependencies = ["pydantic>=1.10.8,~=1.10", "typing_extensions"]
readme = "README.md"
description = "Library package with core DMOD concrete and abstract types depended upon by other DMOD libraries."
dynamic = ["version"]
license = { text = "DOC" }
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.setuptools.dynamic]
version = { attr = "dmod.core._version.__version__" }

[tool.setuptools.packages.find]
exclude = ["dmod.test*"]
