[build-system]
requires = ["setuptools >= 70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmod.externalrequests"
authors = [
    { name = "Robert Bartel" },
    { name = "Austin Raney", email = "austin.raney@noaa.gov" },
    { name = "Chris Tubbs" },
    { name = "Nels Frazier" },
]
dependencies = [
    "websockets",
    "dmod.core>=0.12.0",
    "dmod.communication>=0.17.0",
    "dmod.access>=0.1.1",
]
readme = "README.md"
description = "Library package with classes for handling external interactions"
dynamic = ["version"]
license = { text = "DOC" }
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.setuptools.dynamic]
version = { attr = "dmod.externalrequests._version.__version__" }

[tool.setuptools.packages.find]
exclude = ["dmod.test*"]
