[build-system]
requires = ["setuptools >= 70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmod.metrics"
authors = [
    { name = "Chris Tubbs" },
    { name = "Austin Raney", email = "austin.raney@noaa.gov" },
    { name = "Robert Bartel" },
]
dependencies = ["dmod.core", "scikit-learn", "pandas"]
readme = "README.md"
description = "Library package with classes and functions for performing post-processing metrics"
dynamic = ["version"]
license = { text = "DOC" }
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.setuptools.dynamic]
version = { attr = "dmod.metrics._version.__version__" }

[tool.setuptools.packages.find]
exclude = ["dmod.test*"]
