[build-system]
requires = ["setuptools >= 70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmod.redis"
authors = [
    { name = "Robert Bartel" },
    { name = "Austin Raney", email = "austin.raney@noaa.gov" },
    { name = "Nels Frazier" },
]
dependencies = ["redis"]
readme = "README.md"
description = "Library package with utility classes and functions commonly used Redis operations"
dynamic = ["version"]
license = { text = "DOC" }
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.setuptools.dynamic]
version = { attr = "dmod.redis._version.__version__" }

[tool.setuptools.packages.find]
exclude = ["dmod.test*"]
