[build-system]
requires = ["setuptools >= 70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmod.datarequestservice"
authors = [
    { name = "Austin Raney", email = "austin.raney@noaa.gov" },
    { name = "Robert Bartel" },
    { name = "Donald Johnson" },
]
dependencies = ["flask", "dmod.modeldata>=0.5.0"]
readme = "README.md"
description = ""
dynamic = ["version"]
license = { text = "DOC" }
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.setuptools.dynamic]
version = { attr = "dmod.datarequestservice._version.__version__" }

[tool.setuptools.packages.find]
exclude = ["dmod.test*"]
